--- a/html/list.html
+++ b/html/list.html
@@ -15,9 +15,7 @@
 <select id="city"></select>
 <script>
     data = {
-        '选择类目': [
-
-        ],
+        '选择类目': [],
         '生活': ['3C数码配件',
             'MP3/MP4/iPod/录音笔',
             'OTC药品/国际医药',
